--- a/env/values.yaml
+++ b/env/values.yaml
@@ -22,3 +22,11 @@ jenkins:
       EnvVars:
         TILLER_NAMESPACE: kube-system
 prow: {}
+core-team-service:
+  env:
+    - name: MONGO_DATABASE
+      value: production
+core-player-service:
+  env:
+    - name: MONGO_DATABASE
+      value: production
