--- a/env/values.yaml
+++ b/env/values.yaml
@@ -27,6 +27,5 @@ core-team-service:
     - name: MONGO_DATABASE
       value: production
 core-player-service:
-  env:
-    - name: MONGO_DATABASE
-      value: production
+  database:
+    name: production
